--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Database
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=molam
-DB_PASSWORD=molam_pass
-DB_NAME=molam
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=molam_id
 
 # JWT Secrets
 JWT_SECRET=votre_secret_jwt_super_securise
