--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "uuid": "^9.0.1",
+    "argon2": "^0.31.2"
   }
 }
