--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "otplib": "^12.0.1",
     "pg": "^8.11.3",
+    "qrcode": "^1.5.4",
     "uuid": "^9.0.1",
     "zod": "^4.1.12"
   },
