--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "node --watch src/server.js",
+    "db:init": "node init-database.js",
     "test": "node src/test_runner.js",
     "test:all": "node src/test_runner.js",
     "test:brique1": "node src/test_brique1.js",
