--- a/brique-36-ui-id/mobile/package.json
+++ b/brique-36-ui-id/mobile/package.json
@@ -4,23 +4,31 @@
   "description": "Molam ID Mobile App - React Native",
   "main": "index.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "expo start --lan",
+    "start:mobile": "expo start --lan",
+    "start:web": "expo start --web",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "tunnel": "expo start --tunnel",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.0",
+    "@molam/sdk-auth": "file:../../brique-35-sdk-auth/web",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/stack": "^6.3.0",
-    "@react-navigation/bottom-tabs": "^6.5.0",
-    "react-native-screens": "^3.27.0",
-    "react-native-safe-area-context": "^4.7.0",
-    "react-native-gesture-handler": "^2.13.0",
     "@tanstack/react-query": "^5.12.0",
-    "@molam/sdk-auth": "file:../../brique-35-sdk-auth/web"
+    "expo": "^54.0.21",
+    "react": "19.1.0",
+    "react-dom": "^19.2.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
