--- a/brique-36-ui-id/mobile/package.json
+++ b/brique-36-ui-id/mobile/package.json
@@ -7,6 +7,7 @@
     "start": "expo start --lan",
     "start:mobile": "expo start --lan",
     "start:web": "expo start --web",
+    "build:web": "expo export --platform web",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
