--- a/brique-36-ui-id/web/package.json
+++ b/brique-36-ui-id/web/package.json
@@ -11,13 +11,13 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
     "@molam/sdk-auth": "file:../../brique-35-sdk-auth/web",
     "@tanstack/react-query": "^5.12.0",
+    "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -29,7 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
+    "vite": "^5.4.21",
     "vite-plugin-pwa": "^0.17.4"
   }
 }
