--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "form-data": "^4.0.4",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "otplib": "^12.0.1",
     "pg": "^8.11.3",
