--- a/brique-36-ui-id/web/Dockerfile
+++ b/brique-36-ui-id/web/Dockerfile
@@ -2,12 +2,15 @@ FROM node:20-alpine as build
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
-RUN npm ci
+# Copy SDK dependency (needed for local dependency)
+COPY brique-35-sdk-auth ./brique-35-sdk-auth
 
-# Copy source
-COPY . .
+# Copy Web UI source
+COPY brique-36-ui-id/web ./brique-36-ui-id/web
+
+# Install dependencies in the web directory
+WORKDIR /app/brique-36-ui-id/web
+RUN npm install
 
 # Build
 RUN npm run build
@@ -15,11 +18,11 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 
-# Copy built files
-COPY --from=build /app/dist /usr/share/nginx/html
+# Copy built files from the web directory
+COPY --from=build /app/brique-36-ui-id/web/dist /usr/share/nginx/html
 
 # Copy nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY brique-36-ui-id/web/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
